--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,10 @@
 
         <slf4j.version>2.0.7</slf4j.version>
         <logback.version>1.3.14</logback.version>
+        <micrometer.version>1.5.10</micrometer.version>
+        <junit.version>4.13.1</junit.version>
+        <simpleclient.version>0.9.0</simpleclient.version>
+        <jndi.version>0.11.4.1</jndi.version>
         <postgresql.version>42.7.3</postgresql.version>
         <hikari.version>4.0.3</hikari.version>
     </properties>
@@ -31,6 +35,36 @@
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
             <version>${logback.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>simple-jndi</groupId>
+            <artifactId>simple-jndi</artifactId>
+            <version>${jndi.version}</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>io.micrometer</groupId>
+            <artifactId>micrometer-core</artifactId>
+            <version>${micrometer.version}</version>
+            <scope>provided</scope>
+            <optional>true</optional>
+        </dependency>
+
+        <dependency>
+            <groupId>io.prometheus</groupId>
+            <artifactId>simpleclient</artifactId>
+            <version>${simpleclient.version}</version>
+            <scope>provided</scope>
+            <optional>true</optional>
+        </dependency>
+
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>${junit.version}</version>
+            <scope>test</scope>
         </dependency>
 
         <dependency>
